CosmicCalculator: check applied in values to --obsline option
Until now, if a single value was given to this option, we would get a
segmentation fault. This is because it wouldn't check if the option is
given more than one value.

With this commit, if no value is given after the first, CosmicCalculator
aborts with an informative error.

Since a small change was made in the library, I also incremented the
library soname version with this commit. Many more changes in the library
will be made before the next major release.

This fixes bug #56736.

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,21 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 Copyright (C) 2015-2019 Free Software Foundation, Inc.
 See the end of the file for license conditions.
 
+* Noteworthy changes in release X.X (library X.X.X) (XXXX-XX-XX) [stable]
+
+** New features
+
+** Removed features
+
+** Changed features
+
+** Bugs fixed
+  bug #56736: CosmicCalculator crash when a single value given to --obsline
+
+
+
+
+
 * Noteworthy changes in release 0.10 (library 8.0.0) (2019-08-03) [stable]
 
 ** New features
