CosmicCalculator: new --lineatz for the wavelength of a line at z
With this commit, CosmicCalculator has a new option to return the
wavelength of the given line (as a name/string, or number) at the given
redshift.

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,11 @@ See the end of the file for license conditions.
 
 ** New features
 
+  CosmicCalculator:
+   --lineatz: return the observed wavelength of a line if it was emitted at
+     the redshift given to CosmicCalculator. You can either use known line
+     names, or directly give a number as any emitted line's wavelength.
+
 ** Removed features
 
 ** Changed features
