Book: minor typo in description of --lineatz was corrected
I had forgot to add the word "name" in the description of this option to
CosmicCalculator. Also, it was edited to be a little more clear.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -23245,11 +23245,11 @@ redshift based on the input parameters.
 @item -i STR/FLT
 @itemx --lineatz=STR/FLT
 The wavelength of the specified line at the redshift given to
-CosmicCalculator. The line can be specified either by its inside Gnuastro
-(see description of @option{--obsline} in @ref{CosmicCalculator input
-options}), or directly as a number. In the former case (when a name is
-given), the units are in Angstroms. In the latter (when a number is given),
-its the same units of the given number.
+CosmicCalculator. The line can be specified either by its name (see
+description of @option{--obsline} in @ref{CosmicCalculator input options}),
+or directly as a number. In the former case (when a name is given), the
+returned number is in units of Angstroms. In the latter (when a number is
+given), the returned value is the same units of the input number.
 
 @end table
 
