Book: inclusiveness of --range in Table is now described
Until now, I had forgot to write the inclusiveness of the values given to
the `--range' operator to the Table program. With this commit, it is
explicitly mentioned.

Also, some extra cosmetic spaces in the two calls to `gal_arithmetic' have
been removed, to be more clear. They were useful in the initial
implementation of this function when the third condition's elements would
also align, but that doesn't align any more, so these spaces were
redundant and just confusing.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -12013,9 +12013,11 @@ aren't included.
 @item -r STR,FLT:FLT
 @itemx --range=STR,FLT:FLT
 Only print the output rows that have a value within the given range in the
-@code{STR} column (can be a name or counter). For example with
-@code{--range=sn,5:20} the output's columns will only contain rows that
-have a value between 5 and 20 in the @code{sn} column (not case-sensitive).
+@code{STR} column (can be a name or counter). Note that the range is only
+inclusive in the lower-limit. For example with @code{--range=sn,5:20} the
+output's columns will only contain rows that have a value in the @code{sn}
+column (not case-sensitive) that is greater or equal to 5, and less than
+20.
 
 This option can be called multiple times (different ranges for different
 columns) in one run of the Table program. This is very useful for selecting
